# Gyro-stabilized-Simulation

./: .gitignore  README.md
gyro_control/: CMakeLists.txt  package.xml
gyro_control/config/: gyro_control.yaml
gyro_control/launch/: gyro_control.launch
gyro_description/: CMakeLists.txt  package.xml
gyro_description/urdf/: camera.xacro  component_snippets.xacro  moto.gazebo  moto.xacro
gyro_gazebo/: CMakeLists.txt  package.xml
gyro_gazebo/include/: matrix.h
gyro_gazebo/launch/: test.launch
gyro_gazebo/src/: control_state.cpp  control_state.ino  extended_kalman_obs.cpp  kalman_obs.cpp  kalman_observer.cpp  matrix.cpp  matrix.h  observer-conrol_state.ino  observer-control_state.cpp  read_states.cpp  start_gyro.cpp
gyro_gazebo/src/imu/: read-imu.cpp
gyro_gazebo/worlds/: basic.world
