<?xml version="1.0"?>
<package>
  <name>gyro_control</name>
  <version>0.0.0</version>
  <description>A gyro stabilized moto controller</description>

  <maintainer email="daniel_regner@hotmail.com">Daniel Regner</maintainer>

    <license>ASL 2.0</license>

  <url type="website">https://github.com/dregner</url>
  <url type="bugtracker">https://github.com/dregner/Gyro-stabilized-Simulation/bugs</url>
  <url type="repository">https://github.com/dregner/Gyro-stabilized-Simulation/Wiki</url>

  <author email="daniel_regner@hotmail.com">Daniel Regner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>
  <export>
  </export>
</package>
