<?xml version="1.0"?>
<package>
  <name>gyro_gazebo</name>
  <version>0.0.0</version>
  <description>A gyro stabilized moto description</description>

  <maintainer email="daniel_regner@hotmail.com">Daniel Regner</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/dregner</url>
  <url type="bugtracker">https://github.com/dregner/Gyro-stabilized-Simulation/bugs</url>
  <url type="repository">https://github.com/dregner/Gyro-stabilized-Simulation/Wiki</url>

  <author email="daniel_regner@hotmail.com">Daniel Regner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rrbot_control</run_depend>
  <run_depend>rrbot_description</run_depend>
  <run_depend>xacro</run_depend>


  <export>
  </export>
</package>
